--- a/read-and-write-sqlite-database/read-and-write-sqlite-database.csproj
+++ b/read-and-write-sqlite-database/read-and-write-sqlite-database.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="mydata">
+    <None Include="mydata.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
